deploy/kubernetes/kubectl/bundle.yaml
# Generated by hack/package-k8s.sh; do not edit.
---
# Source: spoke/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spoke
  labels:
    app.kubernetes.io/name: spoke
    helm.sh/chart: spoke-0.1.0
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: spoke
    app.kubernetes.io/instance: RELEASE-NAME

---
# Source: spoke/templates/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: spoke
  labels:
    app.kubernetes.io/name: spoke
    helm.sh/chart: spoke-0.1.0
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spoke
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spoke
        app.kubernetes.io/instance: RELEASE-NAME
    spec:
      containers:
        - name: spoke
          image: "spokeapp/spoke:node-8-alpha"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 256Mi
            
---
# Source: spoke/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spoke
  labels:
    app.kubernetes.io/name: spoke
    helm.sh/chart: spoke-0.1.0
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Tiller
spec:
  rules:
    - host: "spoke.example.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: spoke
              servicePort: http

---
# Source: spoke/templates/secret.yaml
